@@ -1,7 +1,13 @@
+import com.github.spotbugs.snom.SpotBugsTask
+import com.github.spotbugs.snom.Confidence
+import com.github.spotbugs.snom.Effort
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.5' // Actualizado a Spring Boot 3.1.5
     id 'io.spring.dependency-management' version '1.1.3' // Actualizado a 1.1.3
+    id 'checkstyle'
+    id 'com.github.spotbugs' version '6.0.10'
 }
 
 group = 'com.sufi'
@@ -17,9 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation' // Validación
     implementation 'com.fasterxml.jackson.core:jackson-databind' // Para manejar JSON
     testImplementation 'org.springframework.boot:spring-boot-starter-test' // Test
-    testImplementation 'org.junit.jupiter:junit-jupiter-api' // JUnit 5
     testImplementation 'org.junit.jupiter:junit-jupiter-engine' // JUnit 5
-    testImplementation 'org.mockito:mockito-core' // Mockito para mocks
     implementation 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
@@ -32,6 +36,44 @@ dependencies {
     // Micrometer Prometheus registry
     implementation 'io.micrometer:micrometer-registry-prometheus'
 
+    // Para pruebas
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.projectreactor:reactor-test'
+    testImplementation 'io.micrometer:micrometer-core'
+    testImplementation 'io.micrometer:micrometer-test'
+
+    // Para mockito
+    testImplementation 'org.mockito:mockito-core'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
+
+    // Para Lombok en tests
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
+
+}
+
+test {
+    jvmArgs "-XX:+EnableDynamicAgentLoading"
+}
+
+checkstyle {
+    configFile = file("config/checkstyle/checkstyle.xml")
+    toolVersion = "10.12.1"
+    showViolations = true
+}
+
+spotbugs {
+    toolVersion = '4.7.3'
+}
+
+tasks.withType(SpotBugsTask).configureEach {
+    effort = Effort.MAX
+    reportLevel = Confidence.LOW
+    reports {
+        xml.required = false
+        html.required = true
+        html.destination = file("$buildDir/reports/spotbugs/${name}.html")
+    }
 }
 
 java {
